# Farfalle

./: .gitignore  .gitmodules  CMakeLists.txt  Installation.txt  LICENSE  README.md  VisualStudioTest.runsettings  vcpkg.json
Examples/: CenteredGCode.py  CreateFunctionBasedSlice.lua  DensityMapSlices.lua  ErosionSlicing.py  ExecuteExampleFromOut.py  LinearSlicing.py  NumpyVoxel.py  PrintRegions.py  RemeshSoup.py  documentation.py  mergeLines.py  planeSTL.py  remesh.py  remeshPack.py
Examples/FullSlicer/: Categorize.py  LoadModel.py  PrepareWall.py  SliceInner.py  SliceOuter.py  SliceZ.py  WriteGCode.py  main.py
Examples/MultiFileSlicer/: SliceX.py  SliceZ.py  WriteGCode.py  main.py
Examples/NonPlanarWobbleSlicer/: BuildZSliceField.py  Categorize.py  LoadModel.py  Main.stl  PrepareWall.py  SliceInner.py  SliceOuter.py  SliceZ.py  WriteGCode.py  createSlice.py  main.py  slice2model.stl  slice2tool.stl  sliceToolMeshCopy.stl
Examples/VoxelSlicer/: SlidingWindowVoxelizationTest.py  main.py
Lib/: CMakeLists.txt
Lib/psimpl/: psimpl.h  source.txt
Lib/psimpl/detail/: algo.h  error.h  math.h  util.h
Samples/: OneLine.gcode  OneLineLonger.gcode  TwoLine.gcode  prusaminiMinimal.gcode
Source/: FarfalleAPI.cpp  FarfalleAPI.h  main.cpp
Source/API/: CustomPythonFunctions.cpp  CustomPythonFunctions.h  FarfalleAPI.cpp  FarfalleAPI.h  GCodeAPI.cpp  GCodeAPI.h  LineAPI.cpp  LineAPI.h  ModelAPI.cpp  ModelAPI.h  ScriptAPI.cpp  ScriptAPI.h  VoxelAPI.cpp  VoxelAPI.h  apiDatabase.cpp  apiDatabase.h
Source/Config/: Printer.cpp  Printer.h  Temperature.cpp  Temperature.h
Source/GCode/: Extruder.cpp  Extruder.h  LineMerger.cpp  LineMerger.h  LinearPrint.cpp  LinearPrint.h  LinearSpline.cpp  LinearSpline.h  Movement.cpp  Movement.h  Printer.cpp  Printer.h  Shutdown.cpp  Shutdown.h  Startup.cpp  Startup.h  Temperature.cpp  Temperature.h  Travel.cpp  Travel.h
Source/Geometry/: CGALDefs.h  Geometry.h  InfillGenerator.cpp  InfillGenerator.h  KDTree.cpp  KDTree.h  LineSoup.cpp  LineSoup.h  Macaronifyer.cpp  Macaronifyer.h  Marching Triangles.txt  Mesh2D.cpp  Mesh2D.h  Model.cpp  Model.h  Model2.cpp  Model2.h  ModelImplementation.cpp  ModelImplementation.h  Primitives.cpp  Primitives.h  SliceConfig.h  SliceMesh.cpp  SliceMesh.h  Spagetthifyer.cpp  Spagetthifyer.h  Spaghettifyer.cpp  Spaghettifyer.h  Volume.cpp  Volume.h  VolumeImplementation.cpp  VolumeImplementation.h
Source/Tools/: LineSimplification.cpp  LineSimplification.h  MeshSurfaceOffsetting.cpp  MeshSurfaceOffsetting.h  MovementType.h  STL.cpp  STL.h  STLWriter.cpp  STLWriter.h  String2File.cpp  String2File.h  Voxelizer.cpp  Voxelizer.h  XRAW.cpp  XRAW.h  glm2svg.cpp  glm2svg.h
Source/Tools/MagicaVox/: Chunk.cpp  Chunk.h  ChunkFactory.cpp  ChunkFactory.h  ChunkLAYR.cpp  ChunkLAYR.h  ChunkMAIN.h  ChunkMATL.cpp  ChunkMATL.h  ChunkNOTE.cpp  ChunkPACK.cpp  ChunkPACK.h  ChunkRCAM.cpp  ChunkRGBA.cpp  ChunkRGBA.h  ChunkSIZE.cpp  ChunkSIZE.h  ChunkXYZI.cpp  ChunkXYZI.h  ChunknGRP.cpp  ChunknGRP.h  ChunknSHP.cpp  ChunknSHP.h  ChunknTRN.cpp  ChunknTRN.h  ChunkrOBJ.cpp  ChunkrOBJ.h  Import.cpp  Import.h  Reader.cpp  Reader.h  VoxFile.cpp  VoxFile.h  VoxFileRaw.cpp  VoxFileRaw.h  typeDICT.h
Source/Tools/MagicaVox/Chunk/: Chunk.cpp  Chunk.h  ChunkFactory.cpp  ChunkLAYR.cpp  ChunkLAYR.h  ChunkMAIN.cpp  ChunkMAIN.h  ChunkMATL.cpp  ChunkMATL.h  ChunkNOTE.cpp  ChunkNOTE.h  ChunkPACK.cpp  ChunkPACK.h  ChunkRCAM.cpp  ChunkRCAM.h  ChunkRGBA.cpp  ChunkRGBA.h  ChunkSIZE.cpp  ChunkSIZE.h  ChunkXYZI.cpp  ChunkXYZI.h  ChunknGRP.cpp  ChunknGRP.h  ChunknSHP.cpp  ChunknSHP.h  ChunknTRN.cpp  ChunknTRN.h  ChunkrOBJ.cpp  ChunkrOBJ.h
Source/Tools/MagicaVox/IO/: Reader.cpp  Writer.cpp  Writer.h  typeDICT.cpp  typeROTATION.cpp
Source/Voxel/: CSG.cpp  CSG.h  DistanceMap.h  DualIso.h  LineTracer.cpp  LineTracer.h  MarchingCubes.cpp  MarchingCubes.h  Voxelizer.cpp  Voxelizer.h
Test/: BasicLineSlice.cpp  CMakeLists.txt  LineTracerTest.cpp  MagicaVoxTest.cpp  TorusSlice.cpp  slice.cpp  testMain.cpp
Test/TestData/: torus.stl  torusDot.stl
